@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-11T08:14:34Z",
+  "timestamp" : "2023-07-11T16:14:21Z",
   "count_outdated" : 2573,
   "uniques_outdated" : 970,
-  "count" : 2606,
+  "count" : 2607,
   "uniques" : 989,
   "clones" : [
     {
       "timestamp": "2023-06-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
+      "count_decinc": [ 2, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2023-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
